# cpp_base

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
include/: global.h  nfdpp.cpp  nfdpp.h
ports/libsigcpp/: portfile.cmake
ports/nativefiledialog-extended/: vcpkg.json
src/: bench.cpp  bench.hpp  bench_dod.cpp  bench_oop.cpp  bench_proc.cpp  bench_procopt.cpp  entity0.cpp  entity0.h  entity0.hpp  entity1.h  entity2.h  entity2.hpp  entity3.h  entity3.hpp  entity4.h  entity4.hpp  global.hpp  hello.cpp
src/sor/: adapt_json.hpp  adapt_nfd.hpp  adapt_std.hpp  core.cpp  core.hpp
